Address or suppress smart pointer warnings in Thread https://bugs.webkit.org/show_bug.cgi?id=287100

Reviewed by Chris Dumez.

Fixed or suppressed smart pointer static analyzer warnings in Threading.h/cpp.

* Source/WTF/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:
* Source/WTF/SaferCPPExpectations/UncountedLocalVarsCheckerExpectations:
* Source/WTF/wtf/Threading.cpp:
(WTF::Thread::entryPoint):
(WTF::Thread::exchangeIsCompilationThread):
* Source/WTF/wtf/Threading.h:
(WTF::Thread::current):
* Source/WTF/wtf/posix/ThreadingPOSIX.cpp:
(WTF::Thread::initializeTLS):

Canonical link: https://commits.webkit.org/289917@main